--- a/partials/views/componentsNav.html
+++ b/partials/views/componentsNav.html
@@ -1,5 +1,25 @@
-	<div class="col-lg-6"><img src="img/html5Png.png"></div>
-	<div class="col-lg-6"><img src="img/css3Png.png"></div>
-	<div class="col-lg-6"><img src="img/javascriptPng.png"></div>
-	<div class="col-lg-6"><img src="img/bootstraPng.png"></div>
-	<div class="col-lg-6"><img src="img/foundationPng.svg"></div>
+	<div class="col-lg-3 animated fadeIn">
+		<a href="/html5">
+			<img style="margin-top:50px" class="center-block" height="300px" src="img/html5Png.png">
+		</a>
+	</div>
+	<div class="col-lg-3 animated fadeIn">
+		<a href="/css">
+			<img class="center-block" height="200px" src="img/css3Png.png">
+		</a>
+	</div>
+	<div class="col-lg-3 animated fadeIn">
+		<a href="/javascript">
+			<img class="center-block" height="200px" src="img/javascriptPng.png">
+		</a>
+	</div>
+	<div class="col-lg-3 animated fadeIn">
+		<a href="/bootstrap">
+			<img class="center-block" height="200px" src="img/bootstraPng.png">
+		</a>
+	</div>
+	<div class="col-lg-6 animated fadeIn">
+		<a href="/foundation">
+			<img class="center-block" height="200px" src="img/foundationPng.svg">
+		</a>
+	</div>
